--- a/src/assets/components/dy-page.html
+++ b/src/assets/components/dy-page.html
@@ -108,6 +108,7 @@ class DYPage extends DYElement {
 				<dy-sidebar></dy-sidebar>
 			`,
 			'single post': () => `
+				<dy-project-header></dy-project-header>
 				<article>
 					<h1>${data.title.rendered}</h1>
 					${data.featuredImage ? `
