--- a/src/assets/components/dy-page.html
+++ b/src/assets/components/dy-page.html
@@ -33,7 +33,7 @@
 			<p>Website Design and Content © 2014-2016 Darryl Yeo. All Rights Reserved.<br>Powered by <a href="https://platformmeister.com">Platform Meister</a>.</p>
 		</footer>
 	</div>
-	<div id="to-top"></div>
+	<div id="to-top" title="Jump to the top of the page"></div>
 	<dy-notifications></dy-notifications>
 </template>
 
