Allow secondary submenus to be accessible with tornado experiment

--- a/src/assets/components/dy-page.html
+++ b/src/assets/components/dy-page.html
@@ -14,6 +14,10 @@
 		@import './wp-content/themes/DY/assets/article.css';
 		@import './wp-content/themes/DY/assets/footer.css';
 
+		dy-header {
+			z-index: 2;
+		}
+
 		::slotted(*) {
 			flex: 100%;
 		}
