--- a/src/assets/components/dy-page.html
+++ b/src/assets/components/dy-page.html
@@ -71,7 +71,7 @@ class DYPage extends DYElement {
 		this.$toTop.on('click', () => {
 			document.body.animateScrollY(0)
 		})
-		window.on('scroll.throttle', e => {
+		window.on('scroll.throttle.passive', e => {
 			this.$toTop.classList[window.scrollY >= window.innerHeight * 0.5 ? 'add' : 'remove']('show')
 		})
 		//window.trigger('scroll')
