--- a/src/assets/article.css
+++ b/src/assets/article.css
@@ -52,6 +52,11 @@ article section > h2:after {
 	height: 2px;
 	margin-left: 1ch;
 }
+
+article section > h2 a {
+	--link-color: currentColor;
+}
+
 @supports (initial-letter: 1) or (-webkit-initial-letter: 1) {
 	article section:first-of-type > p:first-of-type:first-letter,
 	#excerpt {
