--- a/src/assets/components/dy-comments.html
+++ b/src/assets/components/dy-comments.html
@@ -2,6 +2,9 @@
 
 <template id="dy-comments">
 	<style>
+		:host {
+			display: flex;
+		}
 		#inner-wrapper {
 			flex-direction: column;
 			margin: -0.5rem;
