Use display: block

--- a/src/assets/components/dy-table-of-contents.html
+++ b/src/assets/components/dy-table-of-contents.html
@@ -6,7 +6,7 @@
 			padding: 0;
 		}
 		li > a {
-			display: flex;
+			display: block;
 			font-family: var(--heading-font);
 			font-weight: bold;
 			text-transform: uppercase;
