Indent each sub level

--- a/src/assets/components/dy-table-of-contents.html
+++ b/src/assets/components/dy-table-of-contents.html
@@ -34,6 +34,11 @@
 			border-radius: 15%;
 			transform: translateX(-0.6em) rotate(-45deg);
 		}
+
+		li ol {
+			margin: 0;
+			padding-left: 0.5em;
+		}
 	</style>
 	<nav>
 		
