Always close <slot> elements

--- a/src/assets/components/dy-button.html
+++ b/src/assets/components/dy-button.html
@@ -24,7 +24,7 @@
 		}
 	</style>
 	<div>
-		<slot>
+		<slot></slot>
 	</div>
 </template>
 
@@ -190,7 +190,7 @@ customElements.define('dy-buttons', DYButtons)
 		}
 	</style>
 	<button>
-		<slot>
+		<slot></slot>
 	</button>
 </template>
 
