--- a/src/assets/components/dy-notifications.html
+++ b/src/assets/components/dy-notifications.html
@@ -19,7 +19,7 @@
 			transition: padding 0.3s;
 		}
 	</style>
-	<slot>
+	<slot></slot>
 </template>
 
 <script>
@@ -160,7 +160,7 @@ customElements.define('dy-notifications', DYNotifications)
 	<!--<i id="icon">i</i>-->
 	<dy-button theme="accented heavy 3D small">OK</dy-button>
 	<div>
-		<slot>
+		<slot></slot>
 	</div>
 </template>
 
