--- a/src/assets/components/dy-page.html
+++ b/src/assets/components/dy-page.html
@@ -27,7 +27,7 @@
 	<div id="wrapper">
 		<dy-header></dy-header>
 		<main>
-			<slot>
+			<slot></slot>
 		</main>
 		<footer>
 			<p>Website Design and Content © 2014-2016 Darryl Yeo. All Rights Reserved.<br>Powered by <a href="https://platformmeister.com">Platform Meister</a>.</p>
