--- a/src/assets/components/dy-projects.html
+++ b/src/assets/components/dy-projects.html
@@ -114,7 +114,7 @@
 	</style>
 	<dy-project-filters></dy-project-filters>
 	<div class="projects">
-		<slot>
+		<slot></slot>
 	</div>
 </template>
 
