Make nav scroll horizontally upon overflow; default to right side

--- a/src/assets/components/dy-nav.html
+++ b/src/assets/components/dy-nav.html
@@ -2,7 +2,11 @@
 	<style>
 		:host {
 			display: flex;
+			flex-direction: row-reverse;
+			overflow-x: auto;
+			
 			line-height: 1.5;
+			white-space: nowrap;
 		}
 
 		#inner-wrapper {
