--- a/src/assets/components/dy-nav.html
+++ b/src/assets/components/dy-nav.html
@@ -24,7 +24,7 @@
 		#prev-next {
 			font-size: 0.8em;
 			justify-content: space-between;
-			min-width: 100%;
+			/*min-width: 100%;*/
 			margin: -0.5em;
 		}
 		#prev-next > * {
