Align previous link to right

--- a/src/assets/components/dy-nav.html
+++ b/src/assets/components/dy-nav.html
@@ -30,6 +30,9 @@
 		#prev-next > * {
 			margin: 0.5em;
 		}
+		[rel=prev] {
+			text-align: right;
+		}
 		[rel=prev]:before {
 			content: '‹ ';
 		}
