--- a/src/assets/components/dy-comments.html
+++ b/src/assets/components/dy-comments.html
@@ -104,7 +104,7 @@
 			text-transform: uppercase;
 		}
 		#comment-date {
-			background: rgba(0, 0, 0, 0.05);
+			background-color: rgba(0, 0, 0, 0.05);
 			padding: 0.25em;
 			border-radius: 0.25em;
 			display: inline-block;
